Fix popup transition, align text, fix color scheme

--- a/style.css
+++ b/style.css
@@ -6,27 +6,39 @@ html {
 
 body {
     margin: 0px;
-    background-color: beige;
+    background-color: #1E323B;
+    font-family: 'Copperplate';
 }
 
 .heading {
     display: flex;
     flex-direction: column;
-    background-color: red;
-    opacity: 0.2;
+}
+
+.website-heading {
+    display: flex;
+}
+
+.popcorn {
+    height: 40px;
+    width: 40px;
+    margin: 5rem 0 0 1rem;
 }
 
 #web-title {
-    font-size: 30px;
-    color: black;
-    padding: 2rem;
-    width: 150px;
+    font-size: 70px;
+    color: #235877;
+    padding: 2rem 2rem 0 2rem;
+    width: 335px;
 }
 
 #web-title:hover {
     cursor: default;
-    background-color: black;
-    color:beige;
+    color:#237742a6;
+}
+
+#web-title::first-letter {
+    color: #237742a6;
 }
 
 /* search engine */
@@ -39,18 +51,22 @@ body {
     border-radius: 10px;
     margin: 0 1rem 1rem 1rem;
     padding: 6px;
-    border: 5px solid black;
+    border: 3px solid #2A3B1E;
     font-size: 17px;
     width: 90rem;
-    border-color: black;
-    background-color: beige;
+    background-color: #121E23;
     height: 50px;
-  }
+    color: #6C7072;
+}
+
 #search-button {
     transition-duration: 0.4s;
-    height: 45px;
+    height: 50px;
     margin: 0 0 1rem 0;
     text-align: center;
+    background-color: #121E23;
+    border: none;
+    color: #6C7072;
     /* background-color: #4CAF50;
     padding: 25px 35px;
     text-align: center;
@@ -68,19 +84,53 @@ body {
     color: white;
   }  */
 
+.now-playing {
+    margin: 0 0 0 1rem;
+    color: #235877;
+}
+
 .popup {
-    position: absolute;
+    position: fixed;
     z-index: 10;
     background-color: grey;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    top: 100px;
+    top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
     visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.fadeIn {
+    animation: fadeInAnimation;
+    animation-duration: 1s;
+}
+
+.fadeOut {
+    animation: fadeOutAnimation;
+    animation-duration: 1s;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+}
+
+@keyframes fadeOutAnimation {
+    0% {
+      opacity:1;
+    }
+    100% {
+      opacity:0;
+    }
 }
 
 #trailer {
@@ -92,13 +142,20 @@ body {
 #close {
     position: absolute;
     top: 0px;
-    left: 95%;
-    width: 5rem;
-    height: 5rem;
+    left: 93%;
+    width: 10rem;
+    height: 10rem;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    color: beige;
+    border-radius: 10px;
+    font-size: medium;
 }
 
 #summary {
     width: 60rem;
+    color: #6C7072;
+    /* text-align: center; */
 }
 
 .movie-grid {
@@ -146,7 +203,16 @@ body {
     background-color: black;
     color: beige;
     transform: rotateY(180deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 } 
+
+.freshTom {
+    margin: 1rem;
+    height: 30px;
+    width: 30px;
+}
 
 .movie-poster {
     backface-visibility: hidden;
@@ -154,24 +220,24 @@ body {
 }
 
 .movie-name {
-    color: black;
+    color: #BCC2C4;
     text-align: center;
 }
 
   /* responsiveness */
-@media only screen and (max-width: 1350px) {
+@media only screen and (max-width: 1700px) {
     .movie-grid {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1260px) {
     .movie-grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 840px) {
     .movie-grid {
         grid-template-columns: 1fr;
     }
@@ -181,6 +247,15 @@ body {
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin: 1rem;
+}
+
+#load-button, #top-button {
+    background-color: #121E23;
+    border: none;
+    color: #6C7072;
+    height: 40px;
+    cursor: default;
 }
 
 
